python/cffi/cdef/cdef_air.h

                                        easy numerical comparison */
/* clang-format on */
/* NrrdIO-hack-000 */
/* NrrdIO-hack-001 */
typedef unsigned long long airULLong;
typedef signed long long airLLong;
/*
******** airEnum struct
**
** The airEnum provides the basic mechanism of mapping from a
** string to an int enum value, and back.
*/
typedef struct {
  const char *name;
  /* what are these things? */
  unsigned int M;
  /* str[0]: string for the unknown/invalid value;
     str[1] .. str[M]: canonical strings for the enum values;
     "val"     NULL: unknown/invalid = 0;
                     valid values are 1 .. M
     "val" non-NULL: unknown/invalid = val[0];
                     valid are val[1].. val[M]
  */
  const char **str; /* see above */
  const int *val;   /* see above */
  const char **desc;
  /* desc[i] is a short description of the enum values represented by
     str[i] (thereby starting with the unknown value), to be used to
     by things like hest */
  const char **strEqv;
  /* If non-NULL, all the variations in strings recognized in mapping
     from string to value (the values in valEqv).  This **MUST** be
     terminated by a zero-length string ("") so as to signify the end
     of the list.  This should *not* contain the string for
     unknown/invalid.  If "strEqv" is NULL, then mapping from string
     to value is done only by traversing "str", and "valEqv" is
     ignored. */
  const int *valEqv;
  /* If strEqv non-NULL, valEqv holds the values corresponding to the
     strings in strEqv, with one integer for each non-zero-length
     string in strEqv: strEqv[i] is a valid string representation for
     value valEqv[i]. This should *not* contain the value for
     unknown/invalid.  This "valEqv" is ignored if "strEqv" is
     NULL. */
  int sense; /* require case matching on strings */
} airEnum;
extern int airEnumUnknown(const airEnum *enm);
extern int airEnumValCheck(const airEnum *enm, int val);
extern const char *airEnumStr(const airEnum *enm, int val);
extern const char *airEnumDesc(const airEnum *enm, int val);
extern int airEnumVal(const airEnum *enm, const char *str);
extern char *airEnumFmtDesc(const airEnum *enm, int val, int canon, const char *fmt);
extern void airEnumPrint(FILE *file, const airEnum *enm);
/* endianAir.c */
extern const airEnum *const airEndian;
extern int airMyEndian(void);
/* array.c: poor-man's dynamically resizable arrays */
typedef struct {
  void *data,               /* where the data is */
    **dataP;                /* (possibly NULL) address of user's data variable,
                               kept in sync with internal "data" variable */
  unsigned int len,         /* length of array: # units for which there is
                               considered to be data (which is <= total # units
                               allocated).  The # bytes which contain data is
                               len*unit.  Always updated (unlike "*lenP") */
    *lenP,                  /* (possibly NULL) address of user's length variable,
                               kept in sync with internal "len" variable */
    incr,                   /* the granularity of the changes in amount of space
                               allocated: when the length reaches a multiple of
                               "incr", then the array is resized */
    size;                   /* array is allocated to have "size" increments, or,
                               size*incr elements, or,
                               size*incr*unit bytes */
  size_t unit;              /* the size in bytes of one element in the array */
  int noReallocWhenSmaller; /* as it says */
  /* the following are all callbacks useful for maintaining either an array
     of pointers (allocCB and freeCB) or array of structs (initCB and
     doneCB).  allocCB or initCB is called when the array length increases,
     and freeCB or doneCB when it decreases.  Any of them can be NULL if no
     such activity is desired.  allocCB sets values in the array (as in
     storing the return from malloc(); freeCB is called on values in the
     array (as in calling free()), and the values are cast to void*.  allocCB
     and freeCB don't care about the value of "unit" (though perhaps they
     should).  initCB and doneCB are called on the _addresses_ of elements in
     the array.  allocCB and initCB are called for the elements in ascending
     order in the array, and freeCB and doneCB are called in descending
     order.  allocCB and initCB are mutually exclusive- they can't both be
     non-NULL. Same goes for freeCB and doneCB */
  void *(*allocCB)(void);  /* values of new elements set to return of this */
  void *(*freeCB)(void *); /* called on the values of invalidated elements */
  void (*initCB)(void *);  /* called on addresses of new elements */
  void (*doneCB)(void *);  /* called on addresses of invalidated elements */
} airArray;
extern airArray *airArrayNew(void **dataP, unsigned int *lenP, size_t unit,
                                 unsigned int incr);
extern void airArrayStructCB(airArray *a, void (*initCB)(void *),
                                 void (*doneCB)(void *));
extern void airArrayPointerCB(airArray *a, void *(*allocCB)(void),
                                  void *(*freeCB)(void *));
extern void airArrayLenSet(airArray *a, unsigned int newlen);
/* ---- BEGIN non-NrrdIO */
extern void airArrayLenPreSet(airArray *a, unsigned int newlen);
/* ---- END non-NrrdIO */
extern unsigned int airArrayLenIncr(airArray *a, int delta);
extern airArray *airArrayNix(airArray *a);
extern airArray *airArrayNuke(airArray *a);
/* threadAir.c: simplistic wrapper functions for multi-threading  */
/*
********  airThreadCapable
**
** if non-zero: we have some kind of multi-threading available, either
** via pthreads, or via Windows stuff
*/
extern const int airThreadCapable;
/*
******** airThreadNoopWarning
**
** When multi-threading is not available, and hence constructs like
** mutexes are not available, the operations on them will be
** no-ops. When this variable is non-zero, we fprintf(stderr) a
** warning to this effect when those constructs are used
** (NOTE that this is a mutable global variable)
*/
extern int airThreadNoopWarning;
/* opaque typedefs for OS-specific stuff */
typedef struct _airThread airThread;
typedef struct _airThreadMutex airThreadMutex;
typedef struct _airThreadCond airThreadCond;
typedef struct {
  unsigned int numUsers, numDone;
  airThreadMutex *doneMutex;
  airThreadCond *doneCond;
} airThreadBarrier;
extern airThread *airThreadNew(void);
extern int airThreadStart(airThread *thread, void *(*threadBody)(void *), void *arg);
extern int airThreadJoin(airThread *thread, void **retP);
extern airThread *airThreadNix(airThread *thread);
extern airThreadMutex *airThreadMutexNew(void);
extern int airThreadMutexLock(airThreadMutex *mutex);
extern int airThreadMutexUnlock(airThreadMutex *mutex);
extern airThreadMutex *airThreadMutexNix(airThreadMutex *mutex);
extern airThreadCond *airThreadCondNew(void);
extern int airThreadCondWait(airThreadCond *cond, airThreadMutex *mutex);
extern int airThreadCondSignal(airThreadCond *cond);
extern int airThreadCondBroadcast(airThreadCond *cond);
extern airThreadCond *airThreadCondNix(airThreadCond *cond);
extern airThreadBarrier *airThreadBarrierNew(unsigned numUsers);
extern int airThreadBarrierWait(airThreadBarrier *barrier);
extern airThreadBarrier *airThreadBarrierNix(airThreadBarrier *barrier);
/* ---- END non-NrrdIO */
/*
******** airFP enum
**
** the different kinds of floating point number afforded by IEEE 754,
** and the values returned by airFPClass_f().
**
** The values probably won't agree with those in #include's like
** ieee.h, ieeefp.h, fp_class.h.  This is because IEEE 754 hasn't
** defined standard values for these, so everyone does it differently.
**
** This enum uses underscores (against Teem convention) to help
** legibility while also conforming to the spirit of the somewhat
** standard naming conventions
*/
enum {
  airFP_Unknown,    /*  0: nobody knows */
  airFP_SNAN,       /*  1: signalling NaN */
  airFP_QNAN,       /*  2: quiet NaN */
  airFP_POS_INF,    /*  3: positive infinity */
  airFP_NEG_INF,    /*  4: negative infinity */
  airFP_POS_NORM,   /*  5: positive normalized non-zero */
  airFP_NEG_NORM,   /*  6: negative normalized non-zero */
  airFP_POS_DENORM, /*  7: positive denormalized non-zero */
  airFP_NEG_DENORM, /*  8: negative denormalized non-zero */
  airFP_POS_ZERO,   /*  9: +0.0, positive zero */
  airFP_NEG_ZERO,   /* 10: -0.0, negative zero */
  airFP_Last        /* after the last valid one */
};
/* 754.c: IEEE-754 related stuff values */
typedef union {
  unsigned int i;
  float f;
} airFloat;
typedef union {
  airULLong i;
  double d;
} airDouble;
extern const unsigned int airMyQNaNHiBit;
extern float airFPPartsToVal_f(unsigned int sign,
                                   unsigned int expo,
                                   unsigned int mant);
extern void airFPValToParts_f(unsigned int *signP, unsigned int *expoP,
                                  unsigned int *mantP, float v);
extern double airFPPartsToVal_d(unsigned int sign,
                                    unsigned int expo,
                                    unsigned int mant0,
                                    unsigned int mant1);
extern void airFPValToParts_d(unsigned int *signP,
                                  unsigned int *expoP,
                                  unsigned int *mant0P,
                                  unsigned int *mant1P,
                                  double v);
extern float airFPGen_f(int cls);
extern double airFPGen_d(int cls);
extern int airFPClass_f(float val);
extern int airFPClass_d(double val);
extern void airFPFprintf_f(FILE *file, float val);
extern void airFPFprintf_d(FILE *file, double val);
extern const airFloat airFloatQNaN;
extern const airFloat airFloatSNaN;
extern const airFloat airFloatPosInf;
extern const airFloat airFloatNegInf;
extern float airNaN(void);
extern int airIsNaN(double d);
extern int airIsInf_f(float f);
extern int airIsInf_d(double d);
extern int airExists(double d);
typedef struct {
  /* These need to be at least 32 bits */
  unsigned int state[AIR_RANDMT_N], /* internal state */
    *pNext,                         /* next value to get from state */
    left;                           /* number of values left before
                                       reload needed */
} airRandMTState;
/* randMT.c */
extern airRandMTState *airRandMTStateGlobal;
extern void airRandMTStateGlobalInit(void);
extern airRandMTState *airRandMTStateNew(unsigned int seed);
extern airRandMTState *airRandMTStateNix(airRandMTState *state);
extern void airSrandMT_r(airRandMTState *state, unsigned int seed);
extern double airDrandMT_r(airRandMTState *state); /* [0,1] */
extern unsigned int airUIrandMT_r(airRandMTState *state);
extern double airDrandMT53_r(airRandMTState *state); /* [0,1) */
extern unsigned int airRandInt(unsigned int N);
extern unsigned int airRandInt_r(airRandMTState *state, unsigned int N);
extern void airSrandMT(unsigned int seed);
extern double airDrandMT(void);
/* ---- END non-NrrdIO */
/*
******** airType
**
** Different types which air cares about.
** Currently only used in the command-line parsing, but perhaps will
** be used elsewhere in air later
*/
enum {
  airTypeUnknown,  /*  0 */
  airTypeBool,     /*  1 */
  airTypeInt,      /*  2 */
  airTypeUInt,     /*  3 */
  airTypeLongInt,  /*  4 */
  airTypeULongInt, /*  5 */
  airTypeSize_t,   /*  6 */
  airTypeFloat,    /*  7 */
  airTypeDouble,   /*  8 */
  airTypeChar,     /*  9 */
  airTypeString,   /* 10 */
  airTypeEnum,     /* 11 */
  airTypeOther,    /* 12 */
  airTypeLast
};
/* parseAir.c */
extern double airAtod(const char *str);
extern int airSingleSscanf(const char *str, const char *fmt, void *ptr);
extern const airEnum *const airBool;
extern unsigned int airParseStrB(int *out, const char *s, const char *ct,
                                     unsigned int n, ... /* (nothing used) */);
extern unsigned int airParseStrI(int *out, const char *s, const char *ct,
                                     unsigned int n, ... /* (nothing used) */);
extern unsigned int airParseStrUI(unsigned int *out, const char *s, const char *ct,
                                      unsigned int n, ... /* (nothing used) */);
extern unsigned int airParseStrZ(size_t *out, const char *s, const char *ct,
                                     unsigned int n, ... /* (nothing used) */);
extern unsigned int airParseStrF(float *out, const char *s, const char *ct,
                                     unsigned int n, ... /* (nothing used) */);
/* ---- END non-NrrdIO */
/* dio.c */
/*
******** airNoDio enum
**
** reasons for why direct I/O won't be used with a particular
** file/pointer combination
*/
enum {
  airNoDio_okay,    /*  0: actually, you CAN do direct I/O */
  airNoDio_arch,    /*  1: Teem thinks this architecture can't do it */
  airNoDio_format,  /*  2: Teem thinks given data file format can't use it */
  airNoDio_std,     /*  3: DIO isn't possible for std{in|out|err} */
  airNoDio_fd,      /*  4: couldn't get underlying file descriptor */
  airNoDio_dioinfo, /*  5: calling fcntl() to get direct I/O info failed */
  airNoDio_small,   /*  6: requested size is too small */
  airNoDio_size,    /*  7: requested size not a multiple of d_miniosz */
  airNoDio_ptr,     /*  8: pointer not multiple of d_mem */
  airNoDio_fpos,    /*  9: current file position not multiple of d_miniosz */
  airNoDio_setfl,   /* 10: fcntl(fd, SETFL, FDIRECT) failed */
  airNoDio_test,    /* 11: couldn't memalign() even a small bit of memory */
  airNoDio_disable, /* 12: someone disabled it with airDisableDio */
  airNoDio_last
};